<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A612C"
    android:foregroundTint="#FFFFFF"
    tools:context=".app.view.GameFragment">

    <TextView
        android:id="@+id/textView_discardPile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_discard_pile"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_deck"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_cards"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/alfa_slab_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game_previous_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/game_cards_previous_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/game_next_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/game_cards_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.85" />

    <ImageView
        android:id="@+id/game_discard_pile_image"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:contentDescription="@string/game_discard_pile_description"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/game_deck_image"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:contentDescription="@string/game_deck_description"
        android:src="@drawable/pile_indicator"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/game_hand_image"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:contentDescription="@string/game_hand_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.16000003"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/game_select_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/game_cards_select_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>